--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-Some Code will come in this file.
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <h1>Hello! I'm Vishal.</h1>
+</body>
+</html>
