--- a/index.html
+++ b/index.html
@@ -11,12 +11,11 @@
 
 <img src="https://picsum.photos/200/300" id="octocat" alt="" />
 
-<!-- Feel free to change this text here -->
 <p>
-  Fork me? Fork you, @octocat!
+  <h1>Heading1 from within a paragraph.</h1>
 </p>
 <p>
-  Sean made a change
+  <h2>Vishal made a change.</h2>
 </p>
 
 </body>
